--- a/gw/projects/sdspi_test/CMakeLists.txt
+++ b/gw/projects/sdspi_test/CMakeLists.txt
@@ -3,14 +3,14 @@ if(CMAKE_BUILD_TYPE STREQUAL "fpga")
   gw_project_rules_vivado(
       TOP_MODULE boxlambda_top
       PROJECT_NAME sdspi_test
-      MEM_FILE_TARGET sdspi_test
+      MEM_FILE_TARGET sdspi_test_ram
   )
 else()
   #gw_project_rules_verilator() function is defined in the parent CMakeLists.txt.
   gw_project_rules_verilator(
       TOP_MODULE sim_main
       PROJECT_NAME sdspi_test
-      MEM_FILE_TARGET sdspi_test
+      MEM_FILE_TARGET sdspi_test_ram
       VERILATOR_CPP_FLAGS
           "-I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/ -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang -I${PROJECT_SOURCE_DIR}/sub/sdspi/bench/cpp"
       VERILATOR_LD_FLAGS
