--- a/gw/projects/boxlambda_base/Bender.yml
+++ b/gw/projects/boxlambda_base/Bender.yml
@@ -3,21 +3,17 @@
 # Package metadata. Required.
 package:
   # The name of the package. Required.
-  name: boxlambda_dfx
+  name: boxlambda_base
 
 dependencies:
   # Path dependency.
   boxlambda_soc: { path: "../../components/boxlambda_soc" }
   vs0_stub: { path: "../../components/vs0_stub" }
-  wb_dfx_controller: { path: "../../components/wb_dfx_controller"}
 
 sources:
   - target: prj_constraints
     files:
-      - ../boxlambda_base/constrs/boxlambda_soc.xdc
-  - target: dfx_constraints
-    files:
-      - constrs/vs0_pblock.xdc
+      - constrs/boxlambda_soc.xdc
   - target: vivado
     defines:
       VRAM_SIZE_BYTES: 131072
@@ -32,16 +28,10 @@ sources:
       USB_HID:  ~
       SPIFLASH: ~
       I2C: ~
-      DFX: ~
       VS0: ~
-      #The static design of a DFX build expects to see empty module
-      #declarations on its virtual sockets. That what this flag is used
-      #for. The contents of of reconfigurable modules is ifndef'd with
-      #this flag.
-      DFX_SYNTHESIZE_EMPTY_MODULE: ~
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
-      - ../boxlambda_base/rtl/boxlambda_top.sv
+      - rtl/boxlambda_top.sv
   - target: verilator
     defines:
       VRAM_SIZE_BYTES: 131072
@@ -56,13 +46,12 @@ sources:
       USB_HID:  ~
       SPIFLASH: ~
       I2C: ~
-      DFX: ~
       VS0: ~
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
       - sim/sim_main.cpp
-      - ../boxlambda_base/rtl/boxlambda_top.sv
+      - rtl/boxlambda_top.sv
       - ../../components/spiflash/sim/flashsim.cpp
-      - ../boxlambda_base/sim/sim_main.sv
-      - ../boxlambda_base/lint.vlt
+      - sim/sim_main.sv
+      - boxlambda_base/lint.vlt
 
