--- a/gw/projects/j1b_test/Bender.yml
+++ b/gw/projects/j1b_test/Bender.yml
@@ -13,7 +13,7 @@ dependencies:
 sources:
   - target: prj_constraints
     files:
-      - ../boxlambda_top/constrs/boxlambda_soc.xdc
+      - ../boxlambda_base/constrs/boxlambda_soc.xdc
   - target: arty-a7-35
     defines:
       VRAM_SIZE_BYTES: 65536
@@ -30,7 +30,7 @@ sources:
       VS0: ~
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
-      - ../boxlambda_top/rtl/boxlambda_top.sv
+      - ../boxlambda_base/rtl/boxlambda_top.sv
   - target: arty-a7-100
     defines:
       VRAM_SIZE_BYTES: 131072
@@ -47,10 +47,10 @@ sources:
       VS0: ~
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
-      - ../boxlambda_top/rtl/boxlambda_top.sv
+      - ../boxlambda_base/rtl/boxlambda_top.sv
   - target: verilator
     files:
       - sim/sim_main.cpp
       - ../../components/spiflash/sim/flashsim.cpp
-      - ../boxlambda_top/sim/sim_main.sv
-      - ../boxlambda_top/lint.vlt
+      - ../boxlambda_base/sim/sim_main.sv
+      - ../boxlambda_base/lint.vlt
