--- a/gw/projects/timer_uart_gpio_irqs/Bender.yml
+++ b/gw/projects/timer_uart_gpio_irqs/Bender.yml
@@ -13,7 +13,7 @@ dependencies:
 sources:
   - target: prj_constraints
     files:
-      - ../boxlambda_top/constrs/boxlambda_soc.xdc
+      - ../boxlambda_base/constrs/boxlambda_soc.xdc
   - target: arty-a7-100
     defines:
       VRAM_SIZE_BYTES: 131072
@@ -29,7 +29,7 @@ sources:
       I2C: ~
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
-      - ../boxlambda_top/rtl/boxlambda_top.sv
+      - ../boxlambda_base/rtl/boxlambda_top.sv
   - target: arty-a7-35
     defines:
       VRAM_SIZE_BYTES: 65536
@@ -44,10 +44,10 @@ sources:
       SPIFLASH: ~
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
-      - ../boxlambda_top/rtl/boxlambda_top.sv
+      - ../boxlambda_base/rtl/boxlambda_top.sv
   - target: verilator
     files:
       - sim/sim_main.cpp
-      - ../boxlambda_top/sim/sim_main.sv
-      - ../boxlambda_top/lint.vlt
+      - ../boxlambda_base/sim/sim_main.sv
+      - ../boxlambda_base/lint.vlt
 
