--- a/gw/projects/ym2149_dac_test/Bender.yml
+++ b/gw/projects/ym2149_dac_test/Bender.yml
@@ -13,7 +13,7 @@ dependencies:
 sources:
   - target: prj_constraints
     files:
-      - ../boxlambda_top/constrs/boxlambda_soc.xdc
+      - ../boxlambda_base/constrs/boxlambda_soc.xdc
   - target: arty-a7-35
     defines:
       VRAM_SIZE_BYTES: 65536
@@ -28,7 +28,7 @@ sources:
       SPIFLASH: ~
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
-      - ../boxlambda_top/rtl/boxlambda_top.sv
+      - ../boxlambda_base/rtl/boxlambda_top.sv
   - target: arty-a7-100
     defines:
       VRAM_SIZE_BYTES: 131072
@@ -43,11 +43,11 @@ sources:
       SPIFLASH: ~
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
-      - ../boxlambda_top/rtl/boxlambda_top.sv
+      - ../boxlambda_base/rtl/boxlambda_top.sv
   - target: verilator
     files:
       - sim/sim_main.cpp
-      - ../boxlambda_top/sim/sim_main.sv
-      - ../boxlambda_top/lint.vlt
+      - ../boxlambda_base/sim/sim_main.sv
+      - ../boxlambda_base/lint.vlt
 
 
