--- a/sw/projects/j1b_test/CMakeLists.txt
+++ b/sw/projects/j1b_test/CMakeLists.txt
@@ -21,31 +21,31 @@ target_include_directories(j1b_test_ram
   ${PROJECT_SOURCE_DIR}/sw/components/reset/
 )
 
-link_and_create_mem_file(j1b_test_ram
+link_and_create_image(j1b_test_ram
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
 target_link_libraries(j1b_test_ram sdram gpio riscv j1b_hal)
 
 #Flash image variant
-add_executable(j1b_test
+add_executable(j1b_test_flsh
  EXCLUDE_FROM_ALL
  j1b_test.cpp
 )
 
-target_compile_options(j1b_test
+target_compile_options(j1b_test_flsh
  PRIVATE
   -O2 -g -ffunction-sections
 )
 
-target_include_directories(j1b_test
+target_include_directories(j1b_test_flsh
   PRIVATE
   ${PROJECT_SOURCE_DIR}/sw/components/vs0_hal/
 )
 
-link_and_create_mem_file(j1b_test
+link_and_create_image(j1b_test_flsh
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
 
-target_link_libraries(j1b_test gpio riscv j1b_hal)
+target_link_libraries(j1b_test_flsh gpio riscv j1b_hal)
 
-add_flash_sw_target(j1b_test)
+add_flash_sw_target(j1b_test_flsh)
 
