--- a/sw/projects/spiflash_test/CMakeLists.txt
+++ b/sw/projects/spiflash_test/CMakeLists.txt
@@ -1,22 +1,22 @@
-#Flash test program
+#Flash test program - Flash Build
 
-add_executable(spiflash_test
+add_executable(spiflash_test_flsh
  EXCLUDE_FROM_ALL
  spiflash_test.cpp
 )
 
-target_compile_options(spiflash_test
+target_compile_options(spiflash_test_flsh
  PRIVATE
   -O2 -g
 )
 
-#spiflash_test is linked as a flash memory image.
-link_and_create_mem_file(spiflash_test
+#spiflash_test_ram is linked as Flash memory image.
+link_and_create_image(spiflash_test_flsh
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
 
-target_link_libraries(spiflash_test flashdrvr sdram gpio riscv)
+target_link_libraries(spiflash_test_flsh flashdrvr sdram gpio riscv)
 
-add_flash_sw_target(spiflash_test)
+add_flash_sw_target(spiflash_test_flsh)
 
 #RAM build variant:
 
@@ -31,7 +31,7 @@ target_compile_options(spiflash_test_ram
 )
 
 #spiflash_test_ram is linked as CMEM memory image.
-link_and_create_mem_file(spiflash_test_ram
+link_and_create_image(spiflash_test_ram
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
 target_link_libraries(spiflash_test_ram flashdrvr sdram gpio riscv)
