--- a/sw/projects/ym2149_test/CMakeLists.txt
+++ b/sw/projects/ym2149_test/CMakeLists.txt
@@ -1,19 +1,47 @@
-add_executable(ym2149_test
+#
+# YM2149 Test - RAM Build
+#
+add_executable(ym2149_test_ram
  EXCLUDE_FROM_ALL
  ym2149_test.c
 )
 
-target_compile_options(ym2149_test
+target_compile_options(ym2149_test_ram
  PRIVATE
   -O2
 )
 
-target_include_directories(ym2149_test
+target_include_directories(ym2149_test_ram
     PRIVATE
   ${PROJECT_SOURCE_DIR}/sw/components/ym2149_sys_hal/
 )
 
 #Function defined in parent CMakeLists.txt file:
-link_and_create_mem_file(ym2149_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
+link_and_create_image(ym2149_test_ram ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_cmem_boot.ld)
 
-target_link_libraries(ym2149_test gpio riscv)
+target_link_libraries(ym2149_test_ram gpio riscv)
+
+#
+# YM2149 Test - Flash Build
+#
+add_executable(ym2149_test_flsh
+ EXCLUDE_FROM_ALL
+ ym2149_test.c
+)
+
+target_compile_options(ym2149_test_flsh
+ PRIVATE
+  -O2
+)
+
+target_include_directories(ym2149_test_flsh
+    PRIVATE
+      ${PROJECT_SOURCE_DIR}/sw/components/ym2149_sys_hal/
+)
+
+#Function defined in parent CMakeLists.txt file:
+link_and_create_image(ym2149_test_flsh ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
+
+target_link_libraries(ym2149_test_flsh gpio riscv)
+
+add_flash_sw_target(ym2149_test_flsh)
