Return 0xDEADBEEF on invalid address

--- a/sw/projects/CMakeLists.txt
+++ b/sw/projects/CMakeLists.txt
@@ -75,4 +75,5 @@ add_subdirectory(rtcc_test)
 add_subdirectory(reset_test)
 add_subdirectory(j1b_test)
 add_subdirectory(dfx_test)
+add_subdirectory(invalid_address)
 
