--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -475,4 +475,6 @@ if (BL_TARGET_FPGA STREQUAL "arty-a7-100")
   add_subdirectory(boxlambda_dfx)
   add_subdirectory(boxlambda_base)
 endif()
+add_subdirectory(invalid_address)
+
 
