--- a/gw/projects/boxlambda_dfx/Bender.yml
+++ b/gw/projects/boxlambda_dfx/Bender.yml
@@ -34,6 +34,7 @@ sources:
       I2C: ~
       DFX: ~
       VS0: ~
+      ACK_INVALID_ADDR:  ~
       #The static design of a DFX build expects to see empty module
       #declarations on its virtual sockets. That what this flag is used
       #for. The contents of of reconfigurable modules is ifndef'd with
@@ -58,6 +59,7 @@ sources:
       I2C: ~
       DFX: ~
       VS0: ~
+      ACK_INVALID_ADDR:  ~
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
       - sim/sim_main.cpp
