--- a/sw/components/CMakeLists.txt
+++ b/sw/components/CMakeLists.txt
@@ -21,4 +21,5 @@ add_subdirectory(peek_poke_cli)
 add_subdirectory(ymodem)
 add_subdirectory(ymodem_cli)
 add_subdirectory(mem_fs_cli)
+add_subdirectory(dfx)
 
