--- a/gw/projects/stsound_test/CMakeLists.txt
+++ b/gw/projects/stsound_test/CMakeLists.txt
@@ -11,10 +11,10 @@ else()
       TOP_MODULE sim_main
       PROJECT_NAME stsound_test
       MEM_FILE_TARGET stsound_test_ram
-      VERILATOR_CPP_FLAGS
-          "-I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/ -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang -I${PROJECT_SOURCE_DIR}/sub/sdspi/bench/cpp"
-      VERILATOR_LD_FLAGS
-          -lncurses
+      VERILATOR_FLAGS
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/" 
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang" 
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/sdspi/bench/cpp"
   )
 
   #Add testcase. This one's a script, not just the Verilator Vmodel executable.
