--- a/gw/projects/boxlambda_dfx/CMakeLists.txt
+++ b/gw/projects/boxlambda_dfx/CMakeLists.txt
@@ -35,10 +35,9 @@ else()
       TOP_MODULE sim_main
       PROJECT_NAME boxlambda_dfx
       MEM_FILE_TARGET dfx_test_ram
-      VERILATOR_CPP_FLAGS
-          "-I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/ -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang"
-      VERILATOR_LD_FLAGS
-          -lncurses
+      VERILATOR_FLAGS
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/" 
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang"
   )
 
   #Add testcase.
