--- a/gw/projects/i2c_test/CMakeLists.txt
+++ b/gw/projects/i2c_test/CMakeLists.txt
@@ -11,10 +11,10 @@ else()
       TOP_MODULE sim_main
       PROJECT_NAME i2c_test
       MEM_FILE_TARGET i2c_test_ram
-      VERILATOR_CPP_FLAGS
-          "-I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/ -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang -I${PROJECT_SOURCE_DIR}/sub/wbi2c/bench/cpp"
-      VERILATOR_LD_FLAGS
-          -lncurses
+      VERILATOR_FLAGS
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/" 
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang" 
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbi2c/bench/cpp"
   )
 
   #Add testcase.
