--- a/gw/projects/j1b_test/CMakeLists.txt
+++ b/gw/projects/j1b_test/CMakeLists.txt
@@ -11,10 +11,9 @@ else()
       TOP_MODULE sim_main
       PROJECT_NAME j1b_test
       MEM_FILE_TARGET j1b_test_ram
-      VERILATOR_CPP_FLAGS
-          "-I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/ -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang"
-      VERILATOR_LD_FLAGS
-          -lncurses
+      VERILATOR_FLAGS
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/" 
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang" 
   )
 
   #Add testcase.
