--- a/gw/projects/timer_uart_gpio_irqs/CMakeLists.txt
+++ b/gw/projects/timer_uart_gpio_irqs/CMakeLists.txt
@@ -11,10 +11,9 @@ else()
       TOP_MODULE sim_main
       PROJECT_NAME timer_uart_gpio_irqs
       MEM_FILE_TARGET timer_uart_gpio_irqs_ram
-      VERILATOR_CPP_FLAGS
-          "-I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/ -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang"
-      VERILATOR_LD_FLAGS
-          -lncurses
+      VERILATOR_FLAGS
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/" 
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang" 
   )
   #Add testcase.
   add_test(NAME timer_uart_gpio_irqs_test
